--- a/style.css
+++ b/style.css
@@ -2,21 +2,17 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Chicle', cursive;
-}
-
-
+    font-family: 'Chicle', cursive;}
 body{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: scroll;
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: space-between;
     width: 100%;
-    height: 100vh;
-}
+    height: 100vh;}
 .clock{
     width: 250px;
     height: 150px;
@@ -28,11 +24,11 @@ body{
     align-items: center;
     text-align: center;
     border-radius: 20px;
-    font-size: 60px;
-}
-.body{
+    font-size: 60px;}
+.body{margin: auto;
     display: flex;
     flex-wrap: wrap;
+    align-items: center;
     justify-content: center;
     padding: 30px;
     background-color: #62C3AC ;
@@ -40,27 +36,23 @@ body{
     height: 400px;
     border-radius: 40px;
     border: 4px solid black;
-    gap: 10px;
-}
+    gap: 10px;}
 .pt1{
     display: flex;
     justify-content: space-around;
-    gap: 30px;
-}
+    gap: 30px;}
 .ret{
     background-color: #051825;
     border: 4px solid black;
     width: 150px;
     height: 20px;
-    border-radius: 3px;
-}
+    border-radius: 3px;}
 .circle-blue{
     background-color: #1D04AA;
     width: 20px;
     height: 20px;
     border-radius:50%;
-    border: 4px solid black;
-}
+    border: 4px solid black;}
 .pt2, .pt3{
     display: flex;
     flex-wrap: wrap;
@@ -68,42 +60,59 @@ body{
     align-items: center;
     width: 100px;
     height: 140px;
-    gap: 10px;
-}
+    gap: 10px;}
 .joy{
-    width: 80px;
+    width: 82px;
     height: 80px;
-    background-color: yellow;
-    border: 4px solid black;
-}
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;}
+.button {
+    width: 30px;
+    height: 30px;
+    background: yellow;
+    position: absolute;}
+.button-mid1{ width: 35px;height: 30px;background: yellow; }
+.up { top: 0; left: 50%; transform: translateX(-50%); border: 4px solid black; border-bottom: none;}
+.down { bottom: 0; left: 50%; transform: translateX(-50%); border: 4px solid black; border-top: none; }
+.left { left: 0; top: 50%; transform: translateY(-50%); border: 4px solid black; border-right: none; }
+.right { right: 0; top: 50%; transform: translateY(-50%); border: 4px solid black; border-left: none; }
 .butt{
     width: 40px;
     height: 15px;
     background-color: blue;
     border: 4px solid black;
-    border-radius: 20px;
-}
-
+    border-radius: 20px;}
+.pt3{
+    margin-top: 20px;
+    height: 80px;
+    gap:20px;}
 .triangle{
-    width: 0px;
-    height: 0px;
-    border-right: 20px solid transparent;
-    border-top: 20px solid transparent;
-    border-left: 20px solid transparent;
-    border-bottom: 30px solid aqua;
-}
+    width:30px;
+    height:30px;
+    background-color: #01CBDC;
+    border: 4px solid black;}
 .circle-green{
     background-color: green;
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    border: 4px solid black;
-
-}
+    border: 4px solid black;}
 .circle-red{
     width: 50px;
     height: 50px;
     border-radius: 50%;
     background-color: red;
-    border: 4px solid black;
+    border: 4px solid black;}
+.icons{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: end;
+    width: 60px;
+    height: 100vh;
+    font-size: 45px;
+    gap:20px;
+    backdrop-filter: blur(10px);
 }
